# cpp-traininig

./: .travis.yaml  .travis.yml  CMakeLists.txt  main.cpp  test_version.cpp  version.h.in
